um, here i change back a hidden input's value attr to its original case. this is by way of confession that i may have changed a great many in previous commits. i sure hope functionality does not depend on it. you know who to blame at least.

--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -9,7 +9,7 @@ $page.setTitle("Advanced query")
 #else
 <form action="$link.setPage("AdvancedQuery.vm")" method="post">
 <input type="hidden" name="nextTemplate" value="IssueList.vm" />
-<input type="hidden" name="action" value="Search" />
+<input type="hidden" name="action" value="search" />
 <input type="hidden" name="searchType" value="advanced" />
 <input type="hidden" name="pageNum" value="1" />
 <div class="functnbar">
